--- a/index.html
+++ b/index.html
@@ -1,384 +1,2 @@
----
-layout: default
-title: anh ba nam
-categories:
- - home
----
-
-<div class="row">
-	<div class="col-lg-12">
-		<object class="pull-left biglogo" data="/images/logo.svg" type="image/svg+xml"></object>
-		<div class="bigtitle logobox">
-			TrinhPHAN's Porfolio
-		</div>
-	</div>
-</div>
-
-<div class="bigspacer"></div>
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="smallhead">
-      <p>
-        TRINH Phan-Canh is currently a PhD Student at Max Perutz Labs Vienna, Medical University of Vienna. Trinh does research in host-pathogen interactions and molecular mechanisms of antifungal resistance under the supervision of Prof. Karl Kuchler. He has studied secondary compounds from Actinobacteria and Myxobacteria as a lecturer in microbiology at the University of Medicine and Pharmacy at Ho Chi Minh City for 4 years from 2016. You can find his portfolio at phancanhtrinh.com.
-
-      </p>
-      <p>
-                TRINH is a Pharmacist but an IT lover, which motivated him to get a second bachelor’s degree in IT. He loves bioinformatics, but he dives into a wet lab where TRINH can find the truth of nature.
-
-      </p>
-		</div>
-	</div>
-</div>
-
-<div class="bigspacer"></div>
-<div class="bigspacer"></div>
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="head">
-			<a class="off" href="/blog/">News</a>
-		</div>
-		<div class="spacer"></div>
-	</div>
-</div>
-
-<div class="row">
-	{% for post in site.categories.blog limit:4 %}
-
-	{% for member in site.categories.team %}
-		{% if member.title == post.author %}
-			{% assign author = member %}
-		{% endif %}
-	{% endfor %}
-
-	<div class="col-lg-3 reduced-gutter">
-		<div class="pad-left">
-			<div class="note">
-				<i class="fa fa-comment-o fa-fw"></i>
-				<a class="off" href="{{ post.url }}">
-				{{ post.title }}
-				</a>
-			</div>
-			<div class="smallspacer"></div>
-			<div class="smallnote">
-				Posted
-				{{ post.date | date: "%-d %b %Y" }}
-        {% if post.author %}
-        by <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.author %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.author }}
-        </a>
-        {% endif %}
-        {% if post.authors %}
-        by
-        <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.authors.first %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.authors.first }}
-        </a>
-        and
-        <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.authors.last %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.authors.last }}
-        </a>
-        {% endif %}
-			</div>
-			<div class="bigspacer"></div>
-		</div>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="spacer"></div>
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="head">
-			<a class="off" href="/papers/">Recent papers</a>
-		</div>
-		<div class="spacer"></div>
-	</div>
-</div>
-
-<div class="row">
-	{% for paper in site.categories.papers limit:4 %}
-	<div class="col-lg-3 reduced-gutter">
-		<div class="pad-left">
-			<div class="note">
-				<i class="fa fa-file-text-o fa-fw"></i>
-				<a class="off" href="{{ paper.url }}">
-				{{ paper.title }}
-				</a>
-			</div>
-			<div class="smallspacer"></div>
-			<div class="smallnote">
-				Posted
-				{{ paper.date | date: "%-d %b %Y" }}
-			</div>
-			<div class="bigspacer"></div>
-		</div>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="spacer"></div>
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="head">
-			<a class="off" href="/eng_tut/archive">Lab Tips</a>
-		</div>
-		<div class="spacer"></div>
-	</div>
-</div>
-
-<div class="row">
-	{% for post in site.categories.eng_tut limit:4 %}
-
-	{% for member in site.categories.team %}
-		{% if member.title == post.author %}
-			{% assign author = member %}
-		{% endif %}
-	{% endfor %}
-
-	<div class="col-lg-3 reduced-gutter">
-		<div class="pad-left">
-			<div class="note">
-				<i class="fa fa-comment-o fa-fw"></i>
-				<a class="off" href="{{ post.url }}">
-				{{ post.title }}
-				</a>
-			</div>
-			<div class="smallspacer"></div>
-			<div class="smallnote">
-				Posted
-				{{ post.date | date: "%-d %b %Y" }}
-        {% if post.author %}
-        by <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.author %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.author }}
-        </a>
-        {% endif %}
-        {% if post.authors %}
-        by
-        <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.authors.first %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.authors.first }}
-        </a>
-        and
-        <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.authors.last %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.authors.last }}
-        </a>
-        {% endif %}
-			</div>
-			<div class="bigspacer"></div>
-		</div>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="spacer"></div>
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="head">
-			<a class="off" href="/vn_tut/archive">Tutorials (Vietnamese)</a>
-		</div>
-		<div class="pad-left">
-
-		</div>
-		<div class="spacer"></div>
-	</div>
-
-
-<div class="spacer"></div><div class="spacer"></div>
-
-	{% for post in site.categories.vn_tut limit:4 %}
-
-	{% for member in site.categories.team %}
-		{% if member.title == post.author %}
-			{% assign author = member %}
-		{% endif %}
-	{% endfor %}
-
-	<div class="col-lg-3 reduced-gutter">
-		<div class="pad-left">
-			<div class="note">
-				<i class="fa fa-comment-o fa-fw"></i>
-				<a class="off" href="{{ post.url }}">
-				{{ post.title }}
-				</a>
-			</div>
-			<div class="smallspacer"></div>
-			<div class="smallnote">
-				Posted
-				{{ post.date | date: "%-d %b %Y" }}
-        {% if post.author %}
-        by <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.author %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.author }}
-        </a>
-        {% endif %}
-        {% if post.authors %}
-        by
-        <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.authors.first %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.authors.first }}
-        </a>
-        and
-        <a class="off" href="
-          {% for member in site.categories.team %}
-            {% if member.title == post.authors.last %}
-              {{ member.url }}
-            {% endif %}
-          {% endfor %}
-        ">
-        {{ post.authors.last }}
-        </a>
-        {% endif %}
-			</div>
-			<div class="bigspacer"></div>
-		</div>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="spacer"></div>
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="head">
-			<a class="off" href="/projects/">Active projects</a>
-		</div>
-		<div class="spacer"></div>
-	</div>
-</div>
-
-<div class="row">
-	{% for project in site.data.projects limit:4 %}
-	<div class="col-lg-3 reduced-gutter">
-		<div class="pad-left">
-			<div class="note">
-				<i class="fa fa-edit fa-fw"></i>
-				<a class="off" href="{{ project.url }}">
-				{{ project.title }} - {{ project.description }}
-				</a>
-			</div>
-			<div class="smallspacer"></div>
-			<div class="smallnote">
-				Updated
-				<a class="off" href="{{ project.commits.first.url }}">
-				{{ project.commits.first.date | date: "%-d %b %Y" }}
-				</a>
-				by
-				<a class="off" href="{{ project.commits.first.author_url }}">
-				{{ project.commits.first.author_login }}
-				</a>
-			</div>
-			<div class="bigspacer"></div>
-		</div>
-	</div>
-	{% endfor %}
-</div>
-
-<div class="spacer"></div>
-
-
-
-<div class="row">
-	<div class="col-lg-12">
-		<div class="head">
-			Misc
-		</div>
-		<div class="spacer"></div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-lg-12 reduced-gutter">
-		<div class="pad-left">
-			<ul class="list-inline">
-				{% for page in site.categories.misc %}
-				<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="{{ page.url }}">{{ page.title }}</a>
-				</li>
-				{% endfor %}
-				<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="https://github.com/phancanhtrinh" target="blank">Github</a>
-				</li>
-								<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="https://twitter.com/phancanhtrinh" target="blank">Twitter</a>
-				</li>
-								<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="https://scholar.google.com/citations?user=vQmr9WEAAAAJ&hl=en" target="blank">Scholar</a>
-				</li>
-												<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="https://www.researchgate.net/profile/Trinh-Phan-Canh" target="blank">RG</a>
-				</li>
-												<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="https://phdtalk.github.io" target="blank">PhDTalk</a>
-				</li>
-				<!--
-				<li class="footernav list-inline-item">
-					<i class="fa fa-angle-right"></i> <a class="off" href="/talks/">Talks</a>
-				</li> -->
-			</ul>
-		</div>
-		<div class="spacer"></div>
-	</div>
-</div>
-
-<div class="row">
-  <div class="col-lg-12">
-    <div class="float-lg-right" style="vertical-align: bottom; display: table-cell;">
-      <a class="off" href="https://www.meduniwien.ac.at/">
-        <img width=70 src="/images/logos/Meduni-wien.svg">
-      </a>
-      &nbsp; &nbsp; &nbsp; &nbsp;
-      <a class="off" href="https://www.maxperutzlabs.ac.at/">
-        <img width=68 src="/images/logos/max-perutz-labs-vienna-logo-vector.svg">
-      </a>
-    </div>
-  </div>
-</div>
+cd anhbanam.github.io
+echo "Hello World" > index.html
