--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 cd anhbanam.github.io
 echo "Hello World" > index.html
+As a pharmacist, I strongly desire to help all patients access an advanced healthcare system where evidence-based medicine is applied. As a researcher, I want to make a difference in people's lives by producing (real-world) evidence for best practices and policies. Now and in the future.
