--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: TrinhPHAN
+title: anhbanam
 categories:
  - home
 ---
@@ -9,7 +9,7 @@ categories:
 	<div class="col-lg-12">
 		<object class="pull-left biglogo" data="/images/logo.svg" type="image/svg+xml"></object>
 		<div class="bigtitle logobox">
-			TrinhPHAN's Porfolio
+			anh ba nam
 		</div>
 	</div>
 </div>
@@ -20,12 +20,11 @@ categories:
 	<div class="col-lg-12">
 		<div class="smallhead">
       <p>
-        TRINH Phan-Canh is currently a PhD Student at Max Perutz Labs Vienna, Medical University of Vienna. Trinh does research in host-pathogen interactions and molecular mechanisms of antifungal resistance under the supervision of Prof. Karl Kuchler. He has studied secondary compounds from Actinobacteria and Myxobacteria as a lecturer in microbiology at the University of Medicine and Pharmacy at Ho Chi Minh City for 4 years from 2016. You can find his portfolio at phancanhtrinh.com.
-
+        	As a pharmacist, I strongly desire to help all patients access an advanced healthcare system where evidence-based medicine is applied.
+	      	As a researcher, I want to make a difference in people's lives by producing (real-world) evidence for best practices and policies. Now and in the future.
       </p>
       <p>
-                TRINH is a Pharmacist but an IT lover, which motivated him to get a second bachelor’s degree in IT. He loves bioinformatics, but he dives into a wet lab where TRINH can find the truth of nature.
-
+                My research interests have centered on precision pharmacotherapy, pharmacogenomics, pharmacoepidemiology, comparative effectiveness, and predictive medicine.
       </p>
 		</div>
 	</div>
