--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: anhbanam
+title: anh ba nam
 categories:
  - home
 ---
@@ -36,7 +36,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/blog/">News</a>
+			<a class="off" href="/blog/">Y Dược Học Thường Thức</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
