--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/blog/">Y Dược Học Thường Thức</a>
+			<a class="off" href="/blog/">Y dược học thường thức</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -108,7 +108,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/papers/">Recent papers</a>
+			<a class="off" href="/papers/">Dược trị liệu chính  </a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -140,7 +140,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/eng_tut/archive">Lab Tips</a>
+			<a class="off" href="/eng_tut/archive">Vượt ra biên giới</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -212,7 +212,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/vn_tut/archive">Tutorials (Vietnamese)</a>
+			<a class="off" href="/vn_tut/archive">Về anh ba </a>
 		</div>
 		<div class="pad-left">
 
