--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: anh ba nam
+title: Anh Ba Nam
 categories:
  - home
 ---
@@ -9,7 +9,7 @@ categories:
 	<div class="col-lg-12">
 		<object class="pull-left biglogo" data="/images/logo.svg" type="image/svg+xml"></object>
 		<div class="bigtitle logobox">
-			anh ba nam
+			Nam Nguyen-
 		</div>
 	</div>
 </div>
@@ -108,7 +108,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/papers/">Dược trị liệu chính  </a>
+			<a class="off" href="/papers/">Dược trị liệu chính xác</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -212,7 +212,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/vn_tut/archive">Về anh ba </a>
+			<a class="off" href="/vn_tut/archive">Về tôi</a>
 		</div>
 		<div class="pad-left">
 
