--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/eng_tut/archive">Vượt ra biên giới</a>
+			<a class="off" href="/eng_tut/archive">Vượt qua biên giới</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
