--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/blog/">Y dược học thường thức</a>
+			<a class="off" href="/y-duoc-hoc-thuong-thuc/">Y dược học thường thức</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -108,7 +108,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/papers/">Dược trị liệu chính xác</a>
+			<a class="off" href="/duoc-tri-lieu-chinh-xac/">Dược trị liệu chính xác</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -140,7 +140,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/eng_tut/archive">Vượt qua biên giới</a>
+			<a class="off" href="vuot-qua-bien-gioi">Vượt qua biên giới</a>
 		</div>
 		<div class="spacer"></div>
 	</div>
@@ -212,7 +212,7 @@ categories:
 <div class="row">
 	<div class="col-lg-12">
 		<div class="head">
-			<a class="off" href="/vn_tut/archive">Về tôi</a>
+			<a class="off" href="about">Về tôi</a>
 		</div>
 		<div class="pad-left">
 
