--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ categories:
 </div>
 
 <div class="row">
-	{% for post in site.categories.eng_tut limit:4 %}
+	{% for post in site.categories.vuot-qua-bien-gioi limit:4 %}
 
 	{% for member in site.categories.team %}
 		{% if member.title == post.author %}
